fix controller endpoint